@@ -1917,7 +1917,20 @@ module Asciidoctor
         node.instance_variable_set :@subs, prev_subs
       end
 
-      alias convert_stem convert_code
+      def convert_stem node
+        arrange_block node do |extent|
+          add_dest_for_block node if node.id
+          tare_first_page_content_stream { theme_fill_and_stroke_block :code, extent, caption_node: node }
+          pad_box @theme.code_padding, node do
+            theme_font :code do
+              typeset_formatted_text [text: (guard_indentation node.content), color: @font_color],
+                (calc_line_metrics @base_line_height),
+                bottom_gutter: @bottom_gutters[-1][node]
+            end
+          end
+        end
+        theme_margin :block, :bottom, (next_enclosed_block node)
+      end
 
       # Extract callout marks from string, indexed by 0-based line number
       # Return an Array with the processed string as the first argument
